@@ -2,3 +2,6 @@ include z.mk
 
 libfoo.1.dylib.Sources = foo.c
 $(eval $(call ZMK.Expand,Library.DyLib,libfoo.1.dylib))
+
+libbar.dylib.Sources = bar.c
+$(eval $(call ZMK.Expand,Library.DyLib,libbar.dylib))
